# chatbot-code-interpreter

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: .env-example  app.py  config.py  utils.py
src/prompts/: system.prompt  user.prompt
src/static/: all_stocks.csv
src/templates/: index.html
